# shila-jeet

./: .gitignore  .sops.yaml  README.md  cabal.project  configuration.nix  do.nix  flake.nix  flake.nix2  image.nix  secrets.yaml  shell.nix  shila-jeet.cabal
.github/: github_pages.yml
app/: Main.hs
docs/: flakes.txt
nix/: gc.nix  run-gc.sh
rust/: Cargo.toml
rust/src/: main.rs
secrets/: secrets.yaml
src/: ArrayProcessing.hs  FibonacciTimescaleHvega.hs  QuantAnalysis.hs
